# Maisha-Mahsa

./: .editorconfig  .env.example  .gitattributes  .gitignore  BUILD_PROGRESS.md  CLAUDE.md  FRONTEND_PRD.md  HARNESS_ENGINEERING.md  LAUNCH_READINESS.md  Makefile  P0_HARNESS_PLAN.md  PROGRESS.md  PROGRESS_BOARD.md  README.md  RUNBOOK.md  SECURITY_REVIEW.md  USER_GUIDE.md  mahsa_coverage.json  maisha_mahsa_v4_full_suite_prd.md  render.yaml
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_baseline.py  0002_multitenant_core.py  0003_vault_retention_8y.py  0004_legal_acceptance.py  0005_decision_item_id.py  0006_ca_threads.py  0007_ca_seat.py  0008_job_runs.py  0009_itc_ims_action.py  0010_dpdp_rights.py  0011_org_memory.py  0012_bank_row_anchors.py  0013_cite_support_columns.py
api/app/: __init__.py  cfo_router.py  config.py  deps.py  jobs.py  main.py  scheduler.py
api/app/core/: __init__.py  alerting.py  anchors.py  approval_matrix.py  approvals.py  ask.py  audit.py  audit_pack.py  audit_store.py  auth.py  betterauth.py  ca_seat.py  ca_threads.py  cfo.py  decision_store.py  domain.py  dpdp.py  entitlement_deps.py  entitlements.py  freshness.py  history_store.py  intent.py  landing.py  legal.py  loop.py  mahsa_client.py  mahsa_coverage.py  memory.py  money.py  ocr.py  overview.py  parallel.py  pdf.py  plans.yaml  principal.py  rbac.py  rbac_deps.py  router.py  state_packs.py  statutory_regime.py  (+7 more)
api/app/db/: __init__.py  base.py  importer.py  schema.sql  session.py
api/app/dev/: auth_standin.py  seed.py
api/app/domains/: __init__.py
api/app/llm/: __init__.py  client.py  guardrails.py  maisha.py  prompt.py  retry.py  routing.py  schema.py  tools.py
api/app/states/: AP.yaml  CHANGELOG.md  DL.yaml  GJ.yaml  HR.yaml  KA.yaml  MANIFEST.yaml  MH.yaml  TN.yaml  TS.yaml  (+2 more)
api/evals/: __init__.py  harness.py  report.py  scorers.py  types.py
api/tests/: conftest.py
dif/: Cargo.toml  Dockerfile
dif/rules/: CHANGELOG.md  MANIFEST.yaml  rules.yaml
dif/src/: app.rs  critic.rs  intent.rs  lib.rs  main.rs  money.rs  snapshot.rs  unfold.rs
dif/tests/: integration.rs  parity.rs  prop.rs
(+722 files in other folders)
