[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maisha"
version = "4.0.0"
description = "Maisha — the Python orchestration layer of Maisha-Mahsa"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosmtplib>=3.0",
    "tzdata>=2024.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]
# OCR (optional) — also needs the `tesseract-ocr` system package installed.
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that spawn the real Mahsa binary and exercise the full loop",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's `Depends()` in argument defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
